--- a/src/_styles/SocialButtons.css
+++ b/src/_styles/SocialButtons.css
@@ -1,3 +1,9 @@
+.SocialButtons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .btn-block+.btn-block {
   margin-top: 5px;
 }
